--- a/style/style.css
+++ b/style/style.css
@@ -29,6 +29,12 @@ nav ul{
 .text-primary{
     color: #FD6E0A;
 }
+.header{
+    
+    background-repeat: no-repeat;
+     background-image:url(../images/developer.png),url(../images/header_bg.png);
+     background-position: top left,bottom right;
+}
 nav ul li{
     list-style: none;
     margin-right: 51px;
@@ -51,12 +57,49 @@ padding:18px 35px ;
 border-radius:5px ;
 font-size: 20px;
 
+
 }
 nav ul{
     align-items: center;
 }
+.banner{
+    margin: 0px 35px 0px 230px;
+    /* background-color: #FFF8F3; */
+    display: flex;
+    justify-content: space-between;
+}
+.banner-content{
 
+    font-size: 45px;
+     font-weight:600px ;
+     width: 585px;
+     height: 365px;
+ 
 
+}
+.nova{
+    font-size: 85px;
+    font-weight:bold ;
+    
+}
+
+.student{
+    font-size: 18px;
+    font-weight:400px ;
+}
+.img{
+    width: 584px;
+    height: 676px;
+}
+/* .button1{
+    background-color: #FD6E0A;
+    font-weight: bold;
+    color: white;
+    border: solid;
+    padding:18px 35px ;
+    border-radius:5px ;
+    font-size: 20px;
+} */
 
 
 
