--- a/style/style.css
+++ b/style/style.css
@@ -17,6 +17,7 @@ nav{
     align-items: center;
     justify-content: space-between;
     margin: 50px 200px;
+    
 }
 
 nav ul{
@@ -91,16 +92,48 @@ nav ul{
     width: 584px;
     height: 676px;
 }
-/* .button1{
-    background-color: #FD6E0A;
+.section-title{
+    text-align: center;
+    font-size:35px ;
     font-weight: bold;
-    color: white;
-    border: solid;
-    padding:18px 35px ;
-    border-radius:5px ;
-    font-size: 20px;
-} */
+    color: #181818;
+}
+.section-description{
+    font-size: 18px;
+    color: #757575;
+    text-align: center;
 
+}
+.seconder-background{
+    background-color:#FFF8F3;
+
+}
+.about{
+    border-radius:10px ;
+
+    padding: 131px 157px;
+    margin-top: 130px;
+}
+
+.main{
+    max-width: 1140px;
+    max-height: 550px;
+    text-align: center;
+    margin: 0px auto;
+}
+.about-items{
+    display: flex;
+    justify-content:space-around ;
+    
+}
+.item-description{
+    font-size: 20px;
+    font-weight: bold;
+}
+.item{
+    font-size: 20px;
+    font-weight: 200;
+}
 
 
 
