--- a/style/style.css
+++ b/style/style.css
@@ -134,6 +134,25 @@ nav ul{
     font-size: 20px;
     font-weight: 200;
 }
+.letter{
+    font-size: 35px;
+    font-weight: bold;
+}
+.skills-container{
+    display: flex;
+  gap: 24px;
+  text-align: left;
+
+}
+.skill{
+padding: 30px;
+border-radius: 5px;
+box-shadow: 0px 6px 50px 0px rgba(0, 0, 0, 0.06);
+}
+main section{
+    margin-top: 130px;
+    margin-bottom: 130px;
+}
 
 
 
